[gd_scene load_steps=11 format=3 uid="uid://b2qbv2tdn3kal"]

[ext_resource type="Script" path="res://enemy_cannon.gd" id="1_mop43"]
[ext_resource type="Texture2D" uid="uid://cnqjel5fjij6w" path="res://Tanks Theme/PNG/Default size/explosion1.png" id="2_dft01"]
[ext_resource type="PackedScene" uid="uid://biqbxxfmp15sw" path="res://EnemyBullet.tscn" id="2_h8flf"]
[ext_resource type="Texture2D" uid="uid://b744fnhwi7rmq" path="res://Tanks Theme/PNG/Retina/tankDark_barrel1.png" id="3_es3pi"]
[ext_resource type="Texture2D" uid="uid://btqpy55ey3mhx" path="res://Tanks Theme/PNG/Retina/explosion2.png" id="3_n2i1r"]
[ext_resource type="Texture2D" uid="uid://be13mr8kv1vfs" path="res://Tanks Theme/PNG/Retina/explosion3.png" id="4_qrvq2"]
[ext_resource type="Texture2D" uid="uid://dk8isheb3pgsn" path="res://Tanks Theme/PNG/Retina/explosion4.png" id="5_pjfbs"]
[ext_resource type="Texture2D" uid="uid://c7h0cv0frwflq" path="res://Tanks Theme/PNG/Retina/explosion5.png" id="6_hwmvo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iksqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dft01")
}, {
"duration": 1.0,
"texture": ExtResource("3_n2i1r")
}, {
"duration": 1.0,
"texture": ExtResource("4_qrvq2")
}, {
"duration": 1.0,
"texture": ExtResource("5_pjfbs")
}, {
"duration": 1.0,
"texture": ExtResource("6_hwmvo")
}],
"loop": false,
"name": &"fire",
"speed": 12.0
}, {
"frames": [],
"loop": true,
"name": &"load",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aiysm"]
size = Vector2(127, 64)

[node name="EnemyGun" type="Area2D"]
script = ExtResource("1_mop43")
detect_radius = 500
CbObj = ExtResource("2_h8flf")

[node name="Gun" type="Sprite2D" parent="."]
scale = Vector2(0.984, 0.5)
texture = ExtResource("3_es3pi")

[node name="Marker2D" type="Marker2D" parent="Gun"]
position = Vector2(66, 0)

[node name="fire" type="AnimatedSprite2D" parent="Gun/Marker2D"]
sprite_frames = SubResource("SpriteFrames_iksqd")
animation = &"load"
autoplay = "load"

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_aiysm")

[node name="InSight" type="Area2D" parent="."]
position = Vector2(64, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InSight"]
polygon = PackedVector2Array(-7, -96.5, 1017, -288.5, 1493, -37, 1017, 223.5, -7, 95.5)

[connection signal="animation_finished" from="Gun/Marker2D/fire" to="." method="_on_fire_animation_finished"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="body_entered" from="InSight" to="." method="_on_InSight_body_entered"]
[connection signal="body_exited" from="InSight" to="." method="_on_InSight_body_exited"]
